# qdrant-operator

./: .dockerignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
charts/qdrant-operator/: Chart.yaml  values.yaml
charts/qdrant-operator/crds/: qdrantcluster-crd.yaml
charts/qdrant-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
manifests/crds/: qdrantbackup-crd.yaml  qdrantbackupschedule-crd.yaml  qdrantrestore-crd.yaml
src/qdrant_operator/: __init__.py  container.py  domain.py  handlers.py  helm_adapter.py  kubernetes_adapter.py  main.py  ports.py  qdrant_adapter.py  s3_adapter.py  usecases.py
tests/: test_integration.py
